#5654 EXPLO CODE_EXPLO ajout hello_world simple a compiler et mettre sur la discovery

--- a/production/Geologie/Makefile
+++ b/production/Geologie/Makefile
@@ -44,11 +44,11 @@ build:
 # Nettoyage
 clean:
 	@for i in $(SRC_DIR); do (cd $$i; make $@); done
-	@rm -f $(EXEC) core* $(BIN_DIR)/core*
+	@rm -f $(PROD) core* $(BIN_DIR)/core*
 
 # Execute le code
 run:
-	$(EXEC)
+	$(PROD)
 
 update: clean build
 
