--- a/production/Geologie/test/Makefile
+++ b/production/Geologie/test/Makefile
@@ -8,7 +8,8 @@
 PACKAGES = Geographer \
 	ManagerLOG \
 	Mathematician \
-	UI
+	UI \
+	ReceptionistLOG
 
 #################################################################################
 #																				#
