--- a/production/Geologie/test/Geographer/Makefile
+++ b/production/Geologie/test/Geographer/Makefile
@@ -8,8 +8,13 @@ SRC = $(wildcard *.c)
 OBJ = $(SRC:.c=.o)
 DEP = $(SRC:.c=.d)
 
+# Gcov informations
+GCDA = $(SRC:.c=.gcda)
+GCNO = $(SRC:.c=.gcno)
+
+
 # Inclusion depuis le niveau du package.
-CCFLAGS += -I..
+CCFLAGS += -I.. -I../../$(SRC_DIR)
 
 #################################################################################
 #																				#
