#6200 REVISION CODE_I1_V1 ajout modification

--- a/production/Geologie/Makefile
+++ b/production/Geologie/Makefile
@@ -26,8 +26,8 @@ export CCFLAGS += -MMD -MP 			# gestion automatique des dépendances
 export CCFLAGS += -D_BSD_SOURCE -D_XOPEN_SOURCE_EXTENDED -D_XOPEN_SOURCE -D_DEFAULT_SOURCE -D_GNU_SOURCE
 export CCFLAGS += -std=c99 -Wall -pedantic
 export CCFLAGS += -D_REENTRANT					# define a macro
+#export CCFLAGS += -lm							# Include math library
 export CCFLAGS += -pthread -lpthread			# Include pthread library
-export CCFLAGS += -lm							# Include math library
 
 all : build
 
