#6424 REVISION Geologie, suppression de la fonction main de Receiver, renommage de fonction, suppression des accents dans le code

--- a/production/Geologie/src/Makefile
+++ b/production/Geologie/src/Makefile
@@ -13,13 +13,13 @@ PACKAGES = Geographer \
 SRC  = $(wildcard */*.c)
 OBJ = $(SRC:.c=.o)
 
-# Point d'entrée du programme
+# Point d'entre du programme
 MAIN = main.c
 
-# Gestion automatique des dépendances
+# Gestion automatique des dpendances
 DEP = $(MAIN:.c=.d)
 
-# Executable à générer.
+# Executable à gnrer.
 EXEC = ../$(PROD)
 
 # Inclusion depuis le niveau du package
