--- a/production/Geologie/test/UI/Makefile
+++ b/production/Geologie/test/UI/Makefile
@@ -13,7 +13,7 @@ GCDA = $(SRC:.c=.gcda)
 GCNO = $(SRC:.c=.gcno)
 
 # Inclusion depuis le niveau du package.
-CCFLAGS += -I..
+CCFLAGS += -I.. -I../../$(SRC_DIR)
 
 #################################################################################
 #																				#
@@ -21,18 +21,19 @@ CCFLAGS += -I..
 #																				#
 #################################################################################
 
-all: build
+all: test
 
 # Compilation
-build: $(OBJ)
+test: $(OBJ)
 
 .c.o:
 	$(CC) -c $(CCFLAGS) $< -o $@
-
-# Nettoyage
-.PHONY: clean
 
 clean:
 	@rm -f $(OBJ) $(DEP) $(GCDA) $(GCNO)
 
 -include $(DEP)
+
+# Nettoyage
+.PHONY: clean
+.PHONY: test
