--- a/production/Geologie/src/Mathematician/Makefile
+++ b/production/Geologie/src/Mathematician/Makefile
@@ -17,10 +17,10 @@ CCFLAGS += -I..
 #																				#
 #################################################################################
 
-all: build
+all: prod
 
 # Compilation
-build: $(OBJ)
+prod: $(OBJ)
 
 .c.o:
 	$(CC) -c $(CCFLAGS) $< -o $@
