--- a/production/Geologie/test/Mathematician/Makefile
+++ b/production/Geologie/test/Mathematician/Makefile
@@ -12,7 +12,6 @@ DEP = $(SRC:.c=.d)
 GCDA = $(SRC:.c=.gcda)
 GCNO = $(SRC:.c=.gcno)
 
-
 # Inclusion depuis le niveau du package.
 CCFLAGS += -I.. -I../../$(SRC_DIR)
 
@@ -22,18 +21,19 @@ CCFLAGS += -I.. -I../../$(SRC_DIR)
 #																				#
 #################################################################################
 
-all: build
+all: test
 
 # Compilation
-build: $(OBJ)
+test: $(OBJ)
 
 .c.o:
 	$(CC) -c $(CCFLAGS) $< -o $@
 
-# Nettoyage
-.PHONY: clean
-
 clean:
-	@rm -f $(OBJ) $(DEP)
+	@rm -f $(OBJ) $(DEP) $(GCDA) $(GCNO)
 
 -include $(DEP)
+
+# Nettoyage
+.PHONY: clean
+.PHONY: test
