#6720 CREAT postmanLOG, creation du header de postman, correction de makefile

--- a/production/Geologie/src/CommGeologie/Makefile
+++ b/production/Geologie/src/CommGeologie/Makefile
@@ -4,23 +4,15 @@
 #																				#
 #################################################################################
 
-# Packages.
-PACKAGES = Geographer ManagerLOG UI Mathematician Scanner CommGeologie Led
-
-SRC  = $(wildcard */*.c)
+SRC = $(wildcard *.c)
 OBJ = $(SRC:.c=.o)
+DEP = $(SRC:.c=.d)
 
-# Point d'entre du programme
-MAIN = main.c
+# Inclusion depuis le niveau du package.
+CCFLAGS += -I..
 
-# Gestion automatique des dpendances
-DEP = $(MAIN:.c=.d)
-
-# Executable à gnrer.
-EXEC = ../$(PROD)
-
-# Inclusion depuis le niveau du package
-CCFLAGS += -I.
+# Packages
+PACKAGES = PostmanLOG DispatcherLOG ProxyGUI ProxyLoggerMOB TranslatorLOG
 
 #################################################################################
 #																				#
@@ -31,19 +23,17 @@ CCFLAGS += -I.
 all: prod
 
 # Compilation
-prod:
+prod: $(OBJ)
 	@for p in $(PACKAGES); do (cd $$p && $(MAKE) $@); done
-	$(MAKE) $(EXEC)
 
-$(EXEC): $(OBJ) $(MAIN)
-	$(CC) $(CCFLAGS) $(OBJ) $(MAIN) -MF $(DEP) -o $(EXEC) $(LDFLAGS)
+.c.o:
+	$(CC) -c $(CCFLAGS) $< -o $@
 
 # Nettoyage
+.PHONY: clean
+
 clean:
 	@for p in $(PACKAGES); do (cd $$p && $(MAKE) $@); done
-	@rm -f $(DEP) $(OBJ)
+	@rm -f $(OBJ) $(DEP)
 
 -include $(DEP)
-
-
-.PHONY: clean
