#6722 CREAT proxyLoggerMOB, creation du header de postman, correction de makefile

--- a/production/Geologie/test/Makefile
+++ b/production/Geologie/test/Makefile
@@ -5,11 +5,7 @@
 #################################################################################
 
 # Packages.
-PACKAGES = Geographer \
-	ManagerLOG \
-	UI \
-	Mathematician \
-	ReceptionistLOG
+PACKAGES = Geographer ManagerLOG UI Mathematician Scanner CommGeologie Led
 
 #################################################################################
 #																				#
