#6723 CREAT led.c, ui.c, ... Mise en place de la suite d'appel de fonction de managerLOG, bug sur les includes pour DispatcherLOG et PostmanLOG

--- a/production/Geologie/src/CommGeologie/Makefile
+++ b/production/Geologie/src/CommGeologie/Makefile
@@ -4,13 +4,6 @@
 #																				#
 #################################################################################
 
-SRC = $(wildcard *.c)
-OBJ = $(SRC:.c=.o)
-DEP = $(SRC:.c=.d)
-
-# Inclusion depuis le niveau du package.
-CCFLAGS += -I..
-
 # Packages
 PACKAGES = PostmanLOG DispatcherLOG ProxyGUI ProxyLoggerMOB TranslatorLOG
 
@@ -23,17 +16,14 @@ PACKAGES = PostmanLOG DispatcherLOG ProxyGUI ProxyLoggerMOB TranslatorLOG
 all: prod
 
 # Compilation
-prod: $(OBJ)
+prod:
 	@for p in $(PACKAGES); do (cd $$p && $(MAKE) $@); done
 
-.c.o:
-	$(CC) -c $(CCFLAGS) $< -o $@
 
 # Nettoyage
 .PHONY: clean
 
 clean:
 	@for p in $(PACKAGES); do (cd $$p && $(MAKE) $@); done
-	@rm -f $(OBJ) $(DEP)
 
 -include $(DEP)
