--- a/production/Geologie/src/Makefile
+++ b/production/Geologie/src/Makefile
@@ -7,7 +7,7 @@
 # Packages.
 PACKAGES = Geographer ManagerLOG UI Mathematician Scanner CommGeologie Led
 
-SRC  = $(wildcard */*.c)
+SRC = $(wildcard */*.c) $(wildcard */**/*.c)
 OBJ = $(SRC:.c=.o)
 
 # Point d'entre du programme
