#6724 REVISION CODE_I2 modification geographer

--- a/production/Geologie/src/Makefile
+++ b/production/Geologie/src/Makefile
@@ -5,12 +5,9 @@
 #################################################################################
 
 # Packages.
-PACKAGES = Geographer \
-	ManagerLOG \
-	UI \
-	ReceptionistLOG\
+PACKAGES = Geographer ManagerLOG UI Mathematician Scanner CommGeologie Led
 
-SRC  = $(wildcard */*.c)
+SRC = $(wildcard */*.c) $(wildcard */**/*.c)
 OBJ = $(SRC:.c=.o)
 
 # Point d'entre du programme
@@ -31,10 +28,10 @@ CCFLAGS += -I.
 #																				#
 #################################################################################
 
-all: build
+all: prod
 
 # Compilation
-build:
+prod:
 	@for p in $(PACKAGES); do (cd $$p && $(MAKE) $@); done
 	$(MAKE) $(EXEC)
 
@@ -42,10 +39,11 @@ $(EXEC): $(OBJ) $(MAIN)
 	$(CC) $(CCFLAGS) $(OBJ) $(MAIN) -MF $(DEP) -o $(EXEC) $(LDFLAGS)
 
 # Nettoyage
-.PHONY: clean
-
 clean:
 	@for p in $(PACKAGES); do (cd $$p && $(MAKE) $@); done
 	@rm -f $(DEP) $(OBJ)
 
 -include $(DEP)
+
+
+.PHONY: clean
