#6725 REVISION CODE_I2, ajout des tests unitaire pour TrameToHeader

--- a/production/Geologie/test/CommGeologie/Makefile
+++ b/production/Geologie/test/CommGeologie/Makefile
@@ -4,13 +4,6 @@
 #																				#
 #################################################################################
 
-SRC = $(wildcard *.c)
-OBJ = $(SRC:.c=.o)
-DEP = $(SRC:.c=.d)
-
-# Inclusion depuis le niveau du package.
-CCFLAGS += -I..
-
 # Packages
 PACKAGES = PostmanLOG DispatcherLOG ProxyGUI ProxyLoggerMOB TranslatorLOG
 
@@ -20,20 +13,15 @@ PACKAGES = PostmanLOG DispatcherLOG ProxyGUI ProxyLoggerMOB TranslatorLOG
 #																				#
 #################################################################################
 
-all: prod
+all: test
 
 # Compilation
-prod: $(OBJ)
+test: $(OBJ)
 	@for p in $(PACKAGES); do (cd $$p && $(MAKE) $@); done
-
-.c.o:
-	$(CC) -c $(CCFLAGS) $< -o $@
 
 # Nettoyage
 .PHONY: clean
 
 clean:
 	@for p in $(PACKAGES); do (cd $$p && $(MAKE) $@); done
-	@rm -f $(OBJ) $(DEP)
 
--include $(DEP)
