#6725 REVISION CODE_I2, ajout des tests unitaire pour SendExperimentalTraject et correction en parallele

--- a/production/Geologie/test/Makefile
+++ b/production/Geologie/test/Makefile
@@ -96,7 +96,7 @@ clean: coverage_clean
 
 # Nettoyage du rapport de couverture
 coverage_clean:
-	@rm -f $(GCOVR_DIR)/*.html
+	@rm -rf $(GCOVR_DIR)/
 
 -include $(DEP)
 
