--- a/production/Geologie/Makefile
+++ b/production/Geologie/Makefile
@@ -61,18 +61,18 @@ doc:
 # Nettoyage
 clean:
 	@for i in $(SUB_DIR); do (cd $$i; make $@); done
-	@rm -f $(BIN_DIR)/*
+	@rm -rf $(BIN_DIR)/
 
 check_clean:
-	@rm -f $(CHECK_DIR)/*
+	@rm -rf $(CHECK_DIR)/
 
 # Nettoyage du rapport de couverture
 coverage_clean:
 	@cd $(TST_DIR) && $(MAKE) $@
-	@rm -f $(COVERAGE_DIR)/*
+	@rm -rf $(COVERAGE_DIR)/
 
 doc_clean:
-	rm -rf $(DOC_DIR)/*
+	rm -rf $(DOC_DIR)/
 
 clean_all : clean coverage_clean doc_clean check_clean
 
