#7260 REVISION CODE_I2 test ed scanner

--- a/production/Geobalise/test/Makefile
+++ b/production/Geobalise/test/Makefile
@@ -7,7 +7,7 @@
 # Packages.
 PACKAGES = Geographer \
 	ManagerLOG \
-	Mathematician \
+	MathematicianLOG \
 	UI
 
 #################################################################################
