--- a/production/Geologie/src/Watchdog/Makefile
+++ b/production/Geologie/src/Watchdog/Makefile
@@ -4,26 +4,12 @@
 #																				#
 #################################################################################
 
-# Packages.
-PACKAGES = Geographer \
-	ManagerLOG \
-	MathematicianLOG \
-	UI
-
-SRC  = $(wildcard */*.c)
+SRC = $(wildcard *.c)
 OBJ = $(SRC:.c=.o)
+DEP = $(SRC:.c=.d)
 
-# Point d'entrée du programme
-MAIN = main.c
-
-# Gestion automatique des dépendances
-DEP = $(MAIN:.c=.d)
-
-# Executable à générer.
-EXEC = ../$(PROD)
-
-# Inclusion depuis le niveau du package
-CCFLAGS += -I.
+# Inclusion depuis le niveau du package.
+CCFLAGS += -I..
 
 #################################################################################
 #																				#
@@ -31,21 +17,18 @@ CCFLAGS += -I.
 #																				#
 #################################################################################
 
-all: build
+all: prod
 
 # Compilation
-build:
-	@for p in $(PACKAGES); do (cd $$p && $(MAKE) $@); done
-	$(MAKE) $(EXEC)
+prod: $(OBJ)
 
-$(EXEC): $(OBJ) $(MAIN)
-	$(CC) $(CCFLAGS) $(OBJ) $(MAIN) -MF $(DEP) -o $(EXEC) $(LDFLAGS)
+.c.o:
+	$(CC) -c $(CCFLAGS) $< -o $@
 
 # Nettoyage
 .PHONY: clean
 
 clean:
-	@for p in $(PACKAGES); do (cd $$p && $(MAKE) $@); done
-	@rm -f $(DEP) $(OBJ)
+	@rm -f $(OBJ) $(DEP)
 
 -include $(DEP)
