#6886 REVISION CODE_I2, correction erreur pour le mode NDEBUG

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@
 
 # dossier utilise pour certain fichier template propre au projet
 !/template
+
+# Fichier log generer par les applications
+**/*.log
