--- a/production/Geologie/Makefile
+++ b/production/Geologie/Makefile
@@ -27,7 +27,9 @@ export CCFLAGS += -g -DDEBUG # avec debuggage : -g -DDEBUG # sans debuggage : -D
 export CCFLAGS += -MMD -MP # gestion automatique des dpendances
 export CCFLAGS += -D_BSD_SOURCE -D_XOPEN_SOURCE_EXTENDED -D_XOPEN_SOURCE -D_DEFAULT_SOURCE -D_GNU_SOURCE
 export CCFLAGS += -std=c99 -Wall -pedantic
-export CCFLAGS += -D_REENTRANT					# define a macro
+export CCFLAGS += -D_REENTRANT
+
+export CCFLAGS += -DNLED						# continue si erreur pour les led : NLED, sinon : LED
 
 export LDFLAGS += -lm							# Include math library
 export LDFLAGS += -pthread -lpthread			# Include pthread library
