#6732 REVISION CODE_I2 test geographer

--- a/production/Geologie/test/Makefile
+++ b/production/Geologie/test/Makefile
@@ -53,7 +53,7 @@ LDWRAP += -Wl,--wrap=Watchdog_construct
 LDWRAP += -Wl,--wrap=Watchdog_destroy
 
 
-LDWRAP = -Wl,--wrap=Geographer_transitionFct
+LDWRAP += -Wl,--wrap=Geographer_transitionFct
 LDWRAP += -Wl,--wrap=Scanner_ask4StopScanner
 LDWRAP += -Wl,--wrap=ProxyLoggerMOB_stop
 LDWRAP += -Wl,--wrap=ProxyGUI_stop
