#8179 REVISION CODE_I2, ajout d'unn pseudo client

--- a/explorations/ClientSimple/Makefile
+++ b/explorations/ClientSimple/Makefile
@@ -6,14 +6,11 @@
 
 export BIN_DIR = bin
 export SRC_DIR = src
-export TST_DIR = test
-export COVERAGE_DIR = coverage
 export CHECK_DIR = check
 export DOC_DIR = doc
-export PROD = $(BIN_DIR)/geologie.out
-export TEST = $(BIN_DIR)/geologie_test.out
+export PROD = $(BIN_DIR)/clientSimple.out
 
-SUB_DIR = $(TST_DIR) $(SRC_DIR)
+SUB_DIR = $(SRC_DIR)
 
 #################################################################################
 #																				#
@@ -29,33 +26,20 @@ export CCFLAGS += -D_BSD_SOURCE -D_XOPEN_SOURCE_EXTENDED -D_XOPEN_SOURCE -D_DEFA
 export CCFLAGS += -std=c99 -Wall -pedantic
 export CCFLAGS += -D_REENTRANT
 
-export CCFLAGS += -DNLED						# continue si erreur pour les led : NLED, sinon : LED
-
-export LDFLAGS += -lm							# Include math library
 export LDFLAGS += -pthread -lpthread			# Include pthread library
-export LDFLAGS += -lbluetooth					# Include bluetooth library
 export LDFLAGS += -lrt					        # Include mqueue library
 
-all : prod test
+all : prod
 
 # Compilation
 prod:
 	[ -d $(BIN_DIR) ] || mkdir -p $(BIN_DIR)
 	@cd $(SRC_DIR) && $(MAKE) $@
 
-test: coverage_clean prod
-	[ -d $(BIN_DIR) ] || mkdir -p $(BIN_DIR)
-	@cd $(TST_DIR) && $(MAKE) $@
-
 check:
 	[ -d $(CHECK_DIR) ] || mkdir -p $(CHECK_DIR)
 	cppcheck --enable=all --xml --xml-version=2 ./ 2>$(CHECK_DIR)/report.xml
 	cppcheck-htmlreport --source-dir=./ --file=$(CHECK_DIR)/report.xml --report-dir=$(CHECK_DIR) --title=GEOLOGIE
-
-# Gestion d'un rapport de couverture de code par les tests
-coverage: run_test
-	[ -d $(COVERAGE_DIR) ] || mkdir -p $(COVERAGE_DIR)
-	@cd $(TST_DIR) && $(MAKE) $@
 
 doc:
 	doxygen Doxyfile
@@ -68,24 +52,16 @@ clean:
 check_clean:
 	@rm -rf $(CHECK_DIR)/
 
-# Nettoyage du rapport de couverture
-coverage_clean:
-	@cd $(TST_DIR) && $(MAKE) $@
-	@rm -rf $(COVERAGE_DIR)/
-
 doc_clean:
 	rm -rf $(DOC_DIR)/
 
-clean_all : clean coverage_clean doc_clean check_clean
+clean_all : clean doc_clean check_clean
 
 # Execute le code
 run: prod
 	$(PROD)
 
-run_test: test
-	$(TEST)
-
-update: clean prod test
+update: clean prod
 
 help:
 	@echo -e "\n>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> Projet ProSE A1 ST <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<\n"
@@ -93,25 +69,21 @@ help:
 
 	@echo -e "\t#################################################### Compilation ####################################################\n"
 	@echo -e "\tprod\t\t\t Compile et génére l'éxécutable de Géologie dans le  dossier \033[34mbin\033[0m"
-	@echo -e "\ttest\t\t\t Compile et génére l'éxécutable de des tests de Géologie"
 	@echo -e "\tcheck\t\t\t Exécute une analyse statique sur le code source et export le résultat dans le dossier \033[34mcheck\033[0m"
-	@echo -e "\tcoverage\t\t Génére un rapport de couverture des tests dans le dossier \033[34mcoverage\033[0m"
 	@echo -e "\tdoc\t\t\t Génére la documentation du code source dans le dossier \033[34mdoc\033[0m"
 
 	@echo -e "\n\t##################################################### Nettoyage #####################################################\n"
-	@echo -e "\tclean\t\t\t Supprime les fichiers généré par les commandes \033[33mprod\033[0m et \033[33mtest\033[0m"
+	@echo -e "\tclean\t\t\t Supprime les fichiers généré par la commandes \033[33mprod\033[0m"
 	@echo -e "\tcheck_clean\t\t Supprime les fichiers généré par la commande \033[33mcheck\033[0m"
-	@echo -e "\tcoverage_clean\t\t Supprime les fichiers généré par la commande \033[33mcoverage\033[0m"
 	@echo -e "\tdoc_clean\t\t Supprime les fichiers généré par la commande \033[33mdoc\033[0m"
-	@echo -e "\tclean_all\t\t Exécute les commandes (dans l'ordre) \033[33mclean\033[0m, \033[33mcheck_clean\033[0m, \033[33mcoverage_clean\033[0m et \033[33mdoc_clean\033[0m"
+	@echo -e "\tclean_all\t\t Exécute les commandes (dans l'ordre) \033[33mclean\033[0m, \033[33mcheck_clean\033[0m et \033[33mdoc_clean\033[0m"
 
 	@echo -e "\n\t##################################################### Exécution #####################################################\n"
 	@echo -e "\trun\t\t\t Lance l'éxécutable généré par la commande \033[33mprod\033[0m"
-	@echo -e "\trun_test\t\t Lance l'éxécutable généré par la commande \033[33mtest\033[0m"
 
 	@echo -e "\n\t####################################################### Autre #######################################################\n"
-	@echo -e "\tupdate\t\t\t Exécute les commandes (dans l'ordre) \033[33mclean\033[0m \033[33mprod\033[0m et \033[33mtest\033[0m"
-	@echo -e "\tall\t\t\t Exécute les commandes (dans l'ordre) \033[33mprod\033[0m et \033[33mtest\033[0m"
+	@echo -e "\tupdate\t\t\t Exécute les commandes (dans l'ordre) \033[33mclean\033[0m et \033[33mprod\033[0m"
+	@echo -e "\tall\t\t\t Exécute la commande \033[33mprod\033[0m"
 	@echo -e "\thelp\t\t\t Affiche cet écran"
 
 	@echo -e "\n\n\tPour compiler en utilisant le compilateur pour la carte STM32MP1 entrer la commande:"
@@ -119,10 +91,10 @@ help:
 	@echo -e "\tPenser à nettoyer les anciens fichiers compilés avant de recompiler (voir la commande \033[33mclean\033[0m)."
 
 	@echo -e "\n\n\tPour envoyer le fichier compiler à la carte STM32MP1 entrer la commande:"
-	@echo -e "\n\t\t\033[32mscp bin/geologie.out root@<Ip>:/home/root/geologie.out\033[0m\n"
+	@echo -e "\n\t\t\033[32mscp bin/clientSimple.out root@<Ip>:/home/root/clientSimple.out\033[0m\n"
 
 	@echo -e "\n>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> Projet ProSE A1 ST <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<\n"
+
 .PHONY: clean
-.PHONY: test
 .PHONY: check
 .PHONY: doc
