#8179 REVISION CODE_I2, suppression de warning

--- a/production/Geologie/Makefile
+++ b/production/Geologie/Makefile
@@ -23,13 +23,13 @@ SUB_DIR = $(TST_DIR) $(SRC_DIR)
 
 # Options de compilation
 export CCFLAGS += -O0
-export CCFLAGS += -g -DDEBUG # avec debuggage : -g -DDEBUG # sans debuggage : -DNDEBUG
+export CCFLAGS += -DDEBUG # avec debuggage : -g -DDEBUG # sans debuggage : -DNDEBUG
 export CCFLAGS += -MMD -MP # gestion automatique des dpendances
 export CCFLAGS += -D_BSD_SOURCE -D_XOPEN_SOURCE_EXTENDED -D_XOPEN_SOURCE -D_DEFAULT_SOURCE -D_GNU_SOURCE
 export CCFLAGS += -std=c99 -Wall -pedantic
 export CCFLAGS += -D_REENTRANT
 
-export CCFLAGS += -DNLED						# continue si erreur pour les led : NLED, sinon : LED
+export CCFLAGS += -DLED						# continue si erreur pour les led : NLED, sinon : LED
 
 export LDFLAGS += -lm							# Include math library
 export LDFLAGS += -pthread -lpthread			# Include pthread library
